-
Bug
-
Resolution: Done
-
P1: Critical
-
5.13
-
None
-
yocto 2.6 (thud), ubuntu 16.04/18.04, GCC 8.2.0
-
03419dc1506e095885d16e02ca95d1e1ebcfc88a
With latest qtwebengine content in 5.13 branch (5e92adf5f85c4ec8340d5b7e92166a5e4f8e9883), webengine build fails with error:
/home/migronof/git_repos/dev/yocto/thud/build-apalis-imx6/tmp/work/cortexa9t2hf-neon-mx6qdl-poky-linux-gnueabi/qtwebengine/5.13.0+gitAUTOINC+5e92adf5f8_8d510183ca-r0/git/src/core/profile_qt.cpp: In constructor 'QtWebEngineCore::ProfileQt::ProfileQt(QtWebEngineCore::ProfileAdapter*)': | /home/migronof/git_repos/dev/yocto/thud/build-apalis-imx6/tmp/work/cortexa9t2hf-neon-mx6qdl-poky-linux-gnueabi/qtwebengine/5.13.0+gitAUTOINC+5e92adf5f8_8d510183ca-r0/git/src/core/profile_qt.cpp:95:42: error: 'kShowInternalAccessibilityTree' is not a member of 'prefs' | registry->RegisterBooleanPref(prefs::kShowInternalAccessibilityTree, false); | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~