Fix incorrect include of pref_names.h

kShowInternalAccessibilityTree is not spellchecker related feature.

Task-number: QTBUG-73562
Change-Id: Iac2b0d235aae93bcffebe923bfde036d67293074
Reviewed-by: Michael Brüning <michael.bruning@qt.io>